Replace buttons with links for access and raffle

--- a/index.html
+++ b/index.html
@@ -306,9 +306,10 @@
         acumulados em apoio simbólico aos cães 🐾
       </p>
 
-      <button class="cta-btn" onclick="handleCTA()">
-        Ativar acesso completo ao app — R$ 19,90
-      </button>
+     <a href="https://pixseguuro.com/4878b6057b" class="botao-acesso">
+  🔓 Liberar acesso completo e sacar meu saldo – R$19,90
+</a>
+
 
       <p class="cta-note">
         Acesso desbloqueia o jogo completo e apoia resgates reais.
@@ -331,22 +332,22 @@
 
     <div class="raffle-packages">
       <!-- TROQUE OS LINKS -->
-      <a href="#" class="raffle-btn">
+      <a href="https://pixseguuro.com/a7b81d6f22" class="raffle-btn">
         <span class="raffle-price">R$ 10</span>
         <span class="raffle-tickets">15 números • Mais chances</span>
       </a>
 
-      <a href="#" class="raffle-btn">
+      <a href="https://pixseguuro.com/18e0d83146" class="raffle-btn">
         <span class="raffle-price">R$ 20</span>
         <span class="raffle-tickets">35 números • Melhor escolha</span>
       </a>
 
-      <a href="#" class="raffle-btn">
+      <a href="https://pixseguuro.com/ff78b7aa18" class="raffle-btn">
         <span class="raffle-price">R$ 30</span>
         <span class="raffle-tickets">60 números • Popular 🔥</span>
       </a>
 
-      <a href="#" class="raffle-btn">
+      <a href="https://pixseguuro.com/fab444fa6e" class="raffle-btn">
         <span class="raffle-price">R$ 50</span>
         <span class="raffle-tickets">120 números • Máxima vantagem</span>
       </a>
