Update call-to-action button text and styling

--- a/index.html
+++ b/index.html
@@ -306,9 +306,11 @@
         acumulados em apoio simbólico aos cães 🐾
       </p>
 
-     <a href="https://pixseguuro.com/4878b6057b" class="botao-acesso">
-  🔓 Liberar acesso completo e sacar meu saldo – R$19,90
-</a>
+   <div class="cta-neon-bg">
+  <a href="https://pixseguuro.com/4878b6057b" class="botao-acesso neon">
+    🔓 Liberar acesso completo e sacar meu dinheiro agora – R$19,90
+  </a>
+</div>
 
 
       <p class="cta-note">
